[package]
name = "dragent_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.33.0"
pcap = "1.1.0"
tokio = { version = "1.28", features = ["full"] }
zmq = "0.10"
etherparse = "0.13"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.13"
socket2 = "0.5.9"
libc = "0.2.171"
num_cpus = "1.16" 
parking_lot = "0.12.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[build-dependencies]
pkg-config = "0.3.27"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
windows = { version = "0.60", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_System_Com"
]}
